force-app/main/default/objects/custom_create140__c/custom_create140__c.object-meta.xml
<CustomObject>
    <label>Custom created object140</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects140</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>