force-app/main/default/objects/custom_create140__c/fields/custom_create_140field595__c.field-meta.xml
<CustomField>
    <fullName>custom_create_140field595__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 140field595</label>
    <type>Checkbox</type>
</CustomField>